translation update & resource alignment
From build https://ls.jenkins.autodesk.com/job/CL/job/DynamoHome/199/
Professional translation: all languages
Pseudo translation: none

--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -15,7 +15,7 @@
   "tooltip.text.grid.view.button": "Zobrazení rastru",
   "tooltip.text.list.view.button": "Zobrazení seznamu",
   "learning.title.text.learning": "Výuka",
-  "learning.title.text.guides": "Interaktivní vodítka",
+  "learning.title.text.guides": "Interaktivní průvodce",
   "learning.title.text.videos": "Výukové videofilmy",
   "samples.showsamples.text": "Otevřít umístění souboru",
   "samples.showsamples.files.text": "Grafy",
