--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -2,7 +2,7 @@
   "button.title.text.new": "Nouveau",
   "button.title.text.open": "Ouvrir",
   "button.title.text.open.file": "Ouvrir un fichier",
-  "button.title.text.open.template": "Ouvrir un gabarit",
+  "button.title.text.open.template": "Ouvrir un modèle",
   "button.title.text.backup.locations": "Emplacements de sauvegarde",
   "button.title.text.workspace": "Espace de travail",
   "button.title.text.custom.node": "Noeud personnalisé",
