--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -5,7 +5,7 @@
   "button.title.text.open.template": "템플릿 열기",
   "button.title.text.backup.locations": "백업 위치",
   "button.title.text.workspace": "작업공간",
-  "button.title.text.custom.node": "사용자 노드",
+  "button.title.text.custom.node": "사용자 지정 노드",
   "title.text.recent": "최근",
   "title.text.samples": "샘플",
   "title.text.learning": "학습",
