--- a/src/locales/zh-Hans.json
+++ b/src/locales/zh-Hans.json
@@ -8,13 +8,13 @@
   "button.title.text.custom.node": "自定义节点",
   "title.text.recent": "最近使用的项目",
   "title.text.samples": "样例",
-  "title.text.learning": "正在学习",
+  "title.text.learning": "学习",
   "tooltip.text.recent": "查看最近使用的文件",
   "tooltip.text.samples": "查看样例图",
   "tooltip.text.learning": "查看学习内容",
   "tooltip.text.grid.view.button": "网格视图",
   "tooltip.text.list.view.button": "列表视图",
-  "learning.title.text.learning": "正在学习",
+  "learning.title.text.learning": "学习",
   "learning.title.text.guides": "互动指南",
   "learning.title.text.videos": "视频教程",
   "samples.showsamples.text": "打开文件位置",
