--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -15,7 +15,7 @@
   "tooltip.text.grid.view.button": "그리드 뷰",
   "tooltip.text.list.view.button": "리스트 뷰",
   "learning.title.text.learning": "학습",
-  "learning.title.text.guides": "대화식 안내서",
+  "learning.title.text.guides": "대화형 가이드",
   "learning.title.text.videos": "비디오 튜토리얼",
   "samples.showsamples.text": "파일 위치 열기",
   "samples.showsamples.files.text": "그래프",
