translation update & resource alignment
From build https://ls.jenkins.autodesk.com/job/CL/job/DynamoHome/295/
Professional translation: all languages
Pseudo translation: none

--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -16,7 +16,7 @@
   "tooltip.text.list.view.button": "Zobrazení seznamu",
   "learning.title.text.learning": "Výuka",
   "learning.title.text.guides": "Interaktivní průvodce",
-  "learning.title.text.videos": "Výukové videofilmy",
+  "learning.title.text.videos": "Výuková videa",
   "samples.showsamples.text": "Otevřít umístění souboru",
   "samples.showsamples.files.text": "Grafy",
   "samples.showsamples.datasets.text": "Datové sady",
